<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registerActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="22dp"
            android:text="@string/register_text"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/ptserif_bold"
            android:textSize="42sp"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ptserif_regular"
            android:text="@string/register_location_header"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="20sp"
            />
        <fragment android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            tools:layout="@layout/places_autocomplete_fragment"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:boxCornerRadiusTopStart="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:helperTextEnabled="true"
            android:hint="@string/register_helper_name"
            app:boxCornerRadiusTopEnd="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperTextEnabled="true"
            android:hint="@string/register_helper_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperTextEnabled="true"
            android:hint="@string/register_helper_password"
            app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:inputType="textPassword"

                    />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_login_text"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/ptserif_regular"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text" />

    </LinearLayout>
</ScrollView>